# ADC4

./: CMakeLists.txt  CMakePresets.json  README.md
.github/: FUNDING.yml
ADC4/: ACDS.h  ADC4.cpp  ADC4.h  CMakeLists.txt  ChangeDatabase.cpp  Checksum.cpp  Checksum.h  CompileData.cpp  CompileData.h  CreateEntry.cpp  CreateEntry.h  CustomStringUtils.cpp  CustomStringUtils.h  DataConversion.h  DatabaseInformation.cpp  DatabaseInformation.h  DatabaseKey.cpp  DatabaseKey.h  DecodeData.cpp  DirectoryTools.cpp  DirectoryTools.h  EditDatabaseKey.cpp  EditDatabaseKey.h  EditEntryMenu.cpp  EditEntryMenu.h  EncodeData.cpp  ExportData.cpp  ExportData.h  ExportMenu.cpp  ImportEntry.cpp  ImportEntry.h  MainMenu.cpp  Menus.h  OpenEntry.cpp  OpenEntry.h  ParseData.cpp  ParseData.h  SaveData.cpp  SaveData.h  SerializeData.cpp  (+11 more)
